# Quantum-Lapse

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
benchmark/: CMakeLists.txt
documentation/: Doxyfile.in
quantum-lapse/: .gitignore  Makefile
quantum-lapse/doc/doxygen/: srcdoc
quantum-lapse/doc/doxygen/html/: Pixel_8hpp.html  Pixel_8hpp__incl.dot  Pixel_8hpp__incl.md5  Pixel_8hpp_source.html  annotated.html  classPixel-members.html  classPixel.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html
quantum-lapse/doc/doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  files_0.js  functions_0.js  searchdata.js
quantum-lapse/doc/doxygen/latex/: Pixel_8hpp.tex  Pixel_8hpp.tex.tmp  Pixel_8hpp__incl.dot  Pixel_8hpp__incl.md5  annotated.tex  classPixel.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  refman.tex
quantum-lapse/doc/latex/: .gitignore  citas.bib  preambuloSimple.tex  quantum-lapse.tex
quantum-lapse/include/: FileWrapper.hpp  FrameTimer.hpp  ImageBuffer.hpp  Pixel.hpp  PixelArray.hpp  PixelShader.hpp  Screen.hpp  Shader.hpp  Ship.hpp  ShipShader.hpp  Sprite.hpp  SpriteShader.hpp  gl_header.h  utils.hpp
quantum-lapse/src/: FileWrapper.cpp  FrameTimer.cpp  ImageBuffer.cpp  Pixel.cpp  PixelArray.cpp  PixelShader.cpp  Screen.cpp  Shader.cpp  Ship.cpp  ShipShader.cpp  Sprite.cpp  SpriteShader.cpp  main.cpp  utils.cpp
source/: main.cpp
test/: CMakeLists.txt
test/source/main/: CMakeLists.txt  main_test.cpp
