cmake_minimum_required(VERSION 3.14 FATAL_ERROR)

project(quantum-lapse)

####################################################################################################
# Settings
####################################################################################################
set(QL_TEST_MAIN_SOURCE_DIR ${QL_TEST_SOURCE_DIR}/main)
set(QL_MAIN_SOURCE_DIR ${QL_SOURCE_DIR})

####################################################################################################
# Dependencies
####################################################################################################


####################################################################################################
# Sources -- Headers -- Libraries
####################################################################################################
set(SOURCES
${QL_MAIN_SOURCE_DIR}/main.cpp)

include_directories(
    ${QL_MAIN_SOURCE_DIR}
    ${QL_TEST_MAIN_SOURCE_DIR}
)

####################################################################################################
# Targets
####################################################################################################
add_executable(main_test ${QL_TEST_MAIN_SOURCE_DIR}/main_test.cpp ${SOURCES})
target_link_libraries(main_test gtest_main)
gtest_discover_tests(main_test)
